--- a/AspNetCoreMvcFull/AspNetCoreMvcFull/Views/Customer/Index.cshtml
+++ b/AspNetCoreMvcFull/AspNetCoreMvcFull/Views/Customer/Index.cshtml
@@ -25,7 +25,7 @@
             <td>
                 <a href="/Customer/Details/@item.Id" class="btn btn-success">Details</a>
                 <a href="/Customer/Update/@item.Id" class="btn btn-secondary">Update</a>
-                <a href="/Customer/Delete/@item.Id" class="btn btn-danger">Delete</a>
+                <a href="/Customer/Delete/@item.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this customer?');">Delete</a>
             </td>
         </tr>
     }
