--- a/ProductSales/Views/Home/Index.cshtml
+++ b/ProductSales/Views/Home/Index.cshtml
@@ -27,9 +27,9 @@
 <div class="row mt-5">
     <div class="col-md-4">
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 mx-auto justify-content-center text-center align-content-center align-items-center">
         <a href="Home/SignUp" class="btn btn-outline-info m-auto m-5">Sign Up !</a>
-        <a href="Home/Login/" class="btn btn-outline-success m-auto m-5">Login !</a>
+        <a href="Home/Login" class="btn btn-outline-success m-auto m-5">Login !</a>
     </div>
     <div class="col-md-4">
     </div>
