--- a/AspLearnProject/Views/Shared/_Layout.cshtml
+++ b/AspLearnProject/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a style="height:3rem;" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="logo" src="~/logo.png" /> Hello World!</a>
+                <a style="height:3rem;" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="logo" src="~/logo.jpg" /> Hello World!</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
                             <a class="nav-link text-dark font-shadow" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark font-shadow" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark font-shadow" asp-area="" asp-controller="Home" asp-action="Index">Blog</a>
                         </li>
                         
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item m-2">
-                            <a class="btn btn-dark nav-link text-light" asp-area="" asp-controller="Home">Login</a>
+                            <a class="btn btn-dark nav-link text-light" asp-area="" asp-controller="User" asp-action="Index">Login</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="btn btn-secondary nav-link text-light" asp-area="" asp-controller="Home">Sign Up</a>
+                            <a class="btn btn-secondary nav-link text-light" asp-area="" asp-controller="User" asp-action="SignUp">Sign Up</a>
                         </li>
                     </ul>
                 </div>
