--- a/AspLearnProject/Views/User/SignUp.cshtml
+++ b/AspLearnProject/Views/User/SignUp.cshtml
@@ -22,20 +22,38 @@
     </div>
     <div class="col-md-4">
         <form action="/" method="post" class="form-group">
-            <label class="fw-bolder" for="name">Name : </label>
-            <input type="text" name="name" value="" class="form-control" />
-            <label class="fw-bolder" for="name">Surname : </label>
-            <input type="text" name="name" value="" class="form-control" />
-            <label class="fw-bolder" for="name">User Name : </label>
-            <input type="text" name="name" value="" class="form-control" />
-            <label class="fw-bolder" for="name">E-Mail : </label>
-            <input type="email" name="name" value="" class="form-control" />
-            <label class="fw-bolder" for="password">Password : </label>
-            <input type="password" name="password" value="" class="form-control" />
-            <label class="fw-bolder" for="password">Password Repeat : </label>
-            <input type="password" name="password" value="" class="form-control" />
-            <button class="btn btn-info mt-2" type="submit">Sign Up</button>
+            <label class="fw-bolder" for="Name">Name : </label>
+            <input type="text" name="Name" value="" class="form-control" />
+
+            <label class="fw-bolder" for="Surname">Surname : </label>
+            <input type="text" name="Surname" value="" class="form-control" />
+
+            <label class="fw-bolder" for="Username">User Name : </label>
+            <input type="text" name="Username" value="" class="form-control" />
+
+            <label class="fw-bolder" for="Email">E-Mail : </label>
+            <input type="email" name="Email" value="" class="form-control" />
+
+            <label class="fw-bolder" for="Password">Password : </label>
+            <input type="password" id="Pass1" name="Password" value="" class="form-control" />
+
+            <label class="fw-bolder" for="Password2">Password Repeat : </label>
+            <input type="password" id="Pass2" name="Password2" value="" class="form-control" />
+
+            <button class="btn btn-info mt-2" type="submit" id="submitBtn">Sign Up</button>
         </form>
+
+        <script>
+            document.getElementById("submitBtn").addEventListener("click", function(event) {
+                const sifre1 = document.getElementById("Pass1").value;
+                const sifre2 = document.getElementById("Pass2").value;
+                if (sifre1 !== sifre2) {
+                    event.preventDefault();
+                    alert("Passwords do not match.");
+                }
+            });
+        </script>
+
     </div>
     <div class="col-md-4">
     </div>
