--- a/AspNetCoreMvcFull/AspNetCoreMvcFull/Views/Home/Login.cshtml
+++ b/AspNetCoreMvcFull/AspNetCoreMvcFull/Views/Home/Login.cshtml
@@ -4,7 +4,7 @@
 
 <h1>Login</h1>
 <hr />
-
+<h1 class="text-danger">@ViewBag.Mesaj</h1>
 <form action="/Home/Login" method="post" class="form-control">
     <label>User Name :</label>
     <input type="text" name="UserName" class="mx-auto form-control"/> <br />
