--- a/AspQuiz/Views/Home/Index.cshtml
+++ b/AspQuiz/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <form asp-action="Urun" method="post">
+        <form asp-action="Privacy" method="post">
             <div class="form-group">
                 <label asp-for="UrunId">Id : </label>
                 <input type="text" class="form-control" asp-for="UrunId" placeholder="Enter Id">
