--- a/AspCoreCourseMVC/Views/Course/Apply.cshtml
+++ b/AspCoreCourseMVC/Views/Course/Apply.cshtml
@@ -1,22 +1,23 @@
 ﻿@model Candidate
 
-<form class="form-group">
+<form class="form-group" method="post" asp-action="Apply">
+    <div class="text-danger" asp-validation-summary="All"></div>
     <div class="form-group my-2">
-        <label>Email</label>
-        <input name="Email" class="form-control" />
+        <label asp-for="Email">E-mail</label>
+        <input asp-for="Email" class="form-control" />
     </div>
     <div class="form-group my-2">
-        <label>First Name : </label>
-        <input name="FirstName" class="form-control" />
+        <label asp-for="FirstName">First Name : </label>
+        <input asp-for="FirstName" class="form-control" />
     </div>
     <div class="form-group my-2">
-        <label>Last Name</label>
-        <input name="LastName" class="form-control" />
+        <label asp-for="LastName">Last Name</label>
+        <input asp-for="LastName" class="form-control" />
     </div>
 
     <div class=" form-group my-2">
-        <label>Age</label>
-        <select name="Age" class="form-control">
+        <label asp-for="Age">Age</label>
+        <select asp-for="Age" class="form-control">
             @for (int i = 18; i < 24; i++)
             {
                 <option value="@i">@i.ToString()</option>
@@ -27,21 +28,21 @@
     <fieldset>
         <legend>Select one course</legend>
         <p>
-            <input type="radio" id="mvc" name="SelectedCourse" value="ASP.NET CORE MVC"/>
+            <input type="radio" id="mvc" asp-for="SelectedCourse" value="ASP.NET CORE MVC" checked/>
             <label>ASP.NET CORE MVC</label>
         </p>
         <p>
-            <input type="radio" id="api" name="SelectedCourse" value="ASP.NET CORE API" />
+            <input type="radio" id="api" asp-for="SelectedCourse" value="ASP.NET CORE API" />
             <label>ASP.NET CORE API</label>
         </p>
         <p>
-            <input type="radio" id="blazor" name="SelectedCourse" value="Blazor" />
+            <input type="radio" id="blazor" asp-for="SelectedCourse" value="Blazor" />
             <label>ASP.NET CORE Blazor</label>
         </p>
     </fieldset>
 
     <div>
         <button class="btn btn-outline-info" type="submit">Apply</button>
-        <a class="btn btn-warning" href="/Home">Home</a>
+        <a class="btn btn-warning" asp-controller="Home" asp-action="Index">Home</a>
     </div>
 </form>
